=head1 NAME

Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=head2 Changes in Devel::NYTProf 2.02

  Uses clock_gettime() if available for 100ns resolution.
    Uses CLOCK_MONOTONIC if available else CLOCK_REALTIME.
    Thanks to Steve Peters.
  Deducts statement measurement overheads from inclusive subroutine time.

=head2 Changes in Devel::NYTProf 2.01

  Fixed and unified module version numbers.

=head2 Changes in Devel::NYTProf 2.00

  Major changes. Much extra functionality and performance.
  See http://blog.timbunce.org/2008/07/15/nytprof-v2-a-major-advance-in-perl-profilers/

=head2 Changes in and before 1.50

	1.50  ? ? ? 0:00:00 2008
		- Major revision to include Tim Bunce's call scope statistics features,
				code/doc refactoring, optimizations and bug fixes.
		- Fixes major issues with profiling code that forks.

	1.13	Wed Mar 26 9:35:00 2008
		- Fixed RedHat EL bug - %f isn't the C format for floating-point for RHEL
				Changed Reader.pm to warn-and-continue instead of dieing when a source 
				file cannot be found. (the file will be skipped). Feature by request.
				Makefile.PL changes by tim.bunce - fix warning on LICENSE key when 
				installed by older versions of MakeMaker. Added vim modeline.

	1.12	Tue Mar 25 11:05:00 2008
		- Fixed YET ANOTHER test failure caused by trivial differences between v5.6
				and v5.8.x.	Added test15 that only executes on <5.8 and test06 now only
				runs on >5.8.0

	1.11	Mon Mar 24 11:26:00 2008
		- Rewrote test06 and test 13 only. No functionality changes. There is a Perl
				debugger bug. In perl >5.6 closing "}" in empty loops get execution
				counts for some reason.	This caused 5.6 to fail 'make test' 
				needlessly.	(5.6 actually handles it better and 5.8 & 5.10). So I 
				changed the code to avoid empty loop tests, which are no more useful 
				than loops with code in them.	
				*test06 now tests only loops - foreach, while and do-while loops. 